# opengl-implicit2

./: .gitignore  README.md  opengl-implicit2.cabal  stack.yaml
src/: Balls.hs  Balls_2.hs  BanchoffChmutov4.hs  Bretzel5.hs  Bretzel5_2.hs  Decocube.hs  Goursat.hs  Goursat_2.hs  Heart.hs  MarchingCubes.hs  Orthocircle.hs
src-exe/: ExeBalls.hs  ExeBanchoffChmutov4.hs  ExeBretzel5.hs  ExeGoursat.hs  ExeGoursat2.hs  ExeHeart.hs
src/MarchingCubes/: MarchingCubes.hs  Matrices.hs  OpenGL.hs  Tables.hs  Utils.hs
