name:                opengl-implicit2
version:             0.1.0.0
homepage:            https://github.com/stla/opengl-implicit2#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description: build the executables
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     MarchingCubes.MarchingCubes
                     , MarchingCubes.OpenGL
                     , MarchingCubes.Utils
                     , MarchingCubes.Matrices
                     , MarchingCubes.Tables
                     , MarchingCubes
                     , Utils.OpenGL
                     , Goursat
                     , Orthocircle
                     , Heart
                     , Decocube
                     , Bretzel5
  build-depends:       base >= 4.7 && < 5
                     , extra
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
                     , array
                     , vector
                     , split
  default-language:    Haskell2010
  other-extensions:    FlexibleContexts
                     , MultiParamTypeClasses
  ghc-options:         -Wall

executable goursat
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeGoursat.hs
  ghc-options:         -fllvm -main-is ExeGoursat
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit2
  default-language:    Haskell2010

executable orthocircle
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeOrthocircle.hs
  ghc-options:         -fllvm -threaded -main-is ExeOrthocircle
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit2
  default-language:    Haskell2010

executable heart
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHeart.hs
  ghc-options:         -fllvm -main-is ExeHeart
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit2
  default-language:    Haskell2010

executable decocube
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeDecocube.hs
  ghc-options:         -fllvm -main-is ExeDecocube
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit2
  default-language:    Haskell2010

executable bretzel5
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeBretzel5.hs
  ghc-options:         -fllvm -main-is ExeBretzel5
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/opengl-implicit2

